* Mitigate RubyGems 1.3 compatibility issue (thanks Jens Norrgrann)
* Add experimental `war:exploded` task. This allows you to deploy your
  application in an exploded mode, thus allowing continual development
  without re-warring and re-deploying. Feedback is appreciated if you
  try this feature; it may not work in all application servers and for
  applications other than Rails.
* Upgrade to JRuby 1.1.5 and JRuby-Rack 0.9.3

== 0.9.11

* Auto-detect Rails and Merb and configure appropriately
  - For Rails, set rails booter, determine max runtimes based on Rails.configuration.threadsafe!,
    add Rails gem, detect Rails version, set gems to be packaged based on
    Rails.configuration.gems if available
  - Rails gems only added if Rails application detected
  - For Merb, set merb booter automatically
* Auto-detect config.ru rackup script and pass it into config.webxml.rackup
* rails.env now commented by default in config/warble.rb and internally default
  the value to 'production'
* Default directories in config.dirs to only those that are found to be present
* Allow config.gems array to contain regexps and Gem::Dependency objects as well
 (assist from Jani Soila)
* Fix bug ensuring you can += and -= for config.gems
* Upgrade to JRuby 1.1.4 and JRuby-Rack 0.9.2
* add [] as a way to specify non-identifier keys, example: config.webxml['!@#$%^'] = 'haha'

== 0.9.10

* Upgraded to JRuby-Rack 0.9.1. Fixes JRUBY-2620, JRUBY-2594, JRUBY-2507.
* Now verified to work with Camping and Sinatra. See
  http://github.com/nicksieger/jruby-rack/tree/master/examples for examples
  of how to configure Warbler to package your Camping and Sinatra apps.
* Upgraded to JRuby 1.1.3.
* Log files are no longer packaged in the .war file.
* Fix #<Warbler::WebxmlOpenStruct ...> appearing in web.xml and document workarounds.
* Add config.autodeploy_dir that, when specified, will create the war there.

== 0.9.9

* Now shipping with JRuby-Rack 0.9!
* Upgrade to JRuby 1.1.1