@@ -10,7 +10,11 @@
   without re-warring and re-deploying. Feedback is appreciated if you
   try this feature; it may not work in all application servers and for
   applications other than Rails.
-* Upgrade to JRuby 1.1.5 and JRuby-Rack 0.9.3
+* Handle Rails gem dependencies better (thanks Laszlo Bacsi)
+* Auto-detect Merb dependencies (Merb >= 1.0 only). Please give
+  feedback if you try Warbler with a Merb 1.0 app.
+* Ignore gem development dependencies
+* Upgrade to JRuby 1.1.6 and JRuby-Rack 0.9.3
 
 == 0.9.11
 
